@@ -3,6 +3,7 @@
   <component name="ProjectModuleManager">
     <modules>
       <module fileurl="file://$PROJECT_DIR$/.idea/plugin.video.dr.dk.live.iml" filepath="$PROJECT_DIR$/.idea/plugin.video.dr.dk.live.iml" />
+      <module fileurl="file://$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" filepath="$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" />
     </modules>
   </component>
 </project>
