@@ -1,3 +1,7 @@
+[B]Version 2.0.4 - 2011-11-xx[/B]
+- Added more of the TV2/Regions channels and Folketinget TV
+- Added option to group channels
+
 [B]Version 2.0.3 - 2011-10-03[/B]
 - Fixed problem with old settings
 - Added TV2 Nord and TV2 NordPlus streams as a test,
